--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,6 @@
-- package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "weekly"
+version: 2
+updates:
+    - package-ecosystem: "npm"
+        directory: "/"
+        schedule:
+          interval: "weekly"
