--- a/.github/linters/.htmlhintrc
+++ b/.github/linters/.htmlhintrc
@@ -11,9 +11,9 @@
   "id-unique": true,
   "src-not-empty": true,
   "title-require": true,
-  "alt-require": true,
+  "alt-require": false,
   "doctype-html5": true,
-  "id-class-value": "dash",
+  "id-class-value": false,
   "style-disabled": false,
   "inline-style-disabled": false,
   "inline-script-disabled": false,
